# rodeo

./: .gitattributes  .gitignore  NOTICE  README.rst  pyproject.toml
doc/: conf.py  index.rst
doc/_templates/: layout.html
doc/general/: getting-started.rst
doc/reference/: bibliography.rst  py.rst
example/: binary_contraction.py  lagrangian_descriptor.py  reactive_regions.py
src/rodeo/: __init__.py  _bcm.py  _descriptor.py  _propagate.py  _qpt.py  _system.py
test/: conftest.py  test_bcm.py  test_descriptor.py  test_propagate.py  test_qpt.py  test_system.py
thesis_figs/: calc-ld.py  calc-rr.py  data.py  ld-rr.py  ld.py  plot-ld-rr.py  plot.py  plotlib.py  rr.py
